# pixrr

./: README.md  pyproject.toml
docs/: index.html  pixrr.html  search.js
src/pixrr/: __init__.py  edges.py  enhance.py  filters.py  io.py  segmentation.py  threshold.py  utils.py
tests/: test_basic.py
